--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@supabase/supabase-js": "^2.47.10",
     "@types/react-linkify": "^1.0.4",
+    "@uploadthing/react": "^7.1.5",
     "ably": "^2.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -76,6 +77,7 @@
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.4.4",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
